--- a/module-2/css/index.css
+++ b/module-2/css/index.css
@@ -8,9 +8,17 @@
     margin-bottom: 33.76px;
   }
   #box {
+    margin : 10px;
       position: relative;
       padding: 0px 10px 0px 10px;
     border: 2px solid black;
+    background-color: lightgray;
+  }
+  .dummy{
+    position: relative;
+    top : 0px;
+    right : 0px;
+    height: 30px;
   }
   .topic {
       position : absolute;
@@ -19,7 +27,7 @@
       font-size: 125%;
       font-weight: 500;
       padding: 0px 30px 0px 30px; 
-      border: 2px solid black;
+      border: 1px solid black;
       width : fit-content;
   }
   #p1 {
