--- a/module-2/css/index.css
+++ b/module-2/css/index.css
@@ -1,4 +1,4 @@
-* {
+  * {
     box-sizing: border-box;
     font-family: system-ui;
   }
@@ -7,9 +7,12 @@
     text-align: center;
     margin-bottom: 33.76px;
   }
+  #container {
+    padding: 10px;
+  }
   #box {
-      position: relative;
-      padding: 0px 10px 0px 10px;
+    position: relative;
+    padding: 0px 10px 0px 10px;
     border: 2px solid black;
     background-color: lightgray;
   }
@@ -26,7 +29,9 @@
       font-size: 125%;
       font-weight: 500;
       padding: 0px 30px 0px 30px; 
-      border: 1px solid black;
+      border-width: 1px 1px 2px 2px ;
+      border-style: solid;
+      border-color: black;
       width : fit-content;
   }
   #p1 {
@@ -47,9 +52,16 @@
   
   /********** Large devices only **********/
   @media (min-width: 992px) {
-    .col-lg-4 {
+    .col-lg-4, .col-lg-12 {
       float: left;
+    }
+
+    .col-lg-4 {
       width: 33.33%;
+    }
+
+    .col-lg-12 {
+      width: 100%;
     }
     
   }
