--- a/module-3/css/styles.css
+++ b/module-3/css/styles.css
@@ -5,7 +5,7 @@ body {
 
 /** Header **/
 #header-nav {
-  background-color: darkgray;
+  background-color: lightsalmon;
   border-radius: 0;
   border-width: 1px;
   border-color: black ;
@@ -14,9 +14,9 @@ body {
   padding-top: 25px;
   margin-bottom: 25px;
 }
-.navbar-brand h1 { /* Restaurant name */
+.navbar-brand h1 { /* Food LLC */
   font-family: 'Lora', serif;
-  color: #557c3e;
+  color: green;
   font-weight: bold;
   font-style: italic;
   text-shadow: 1px 1px 1px #222;
@@ -24,14 +24,16 @@ body {
   margin-bottom: 0px;
   line-height: .75;
 }
-.navbar-brand a:hover, .navbar-brand a:focus {
-  text-decoration: none;
-}
-
 #nav-list {
   margin-top: 10px;
+  background-color: 	rgb(236, 220, 76);
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 #nav-list a {
+  color: #951C49;
   text-align: center;
 }
 #nav-list a:hover {
@@ -39,6 +41,10 @@ body {
 }
 #nav-list a span {
   font-size: 1.8em;
+}
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid #61122f;
 }
 .navbar-header button.navbar-toggle {
   clear: both;
@@ -65,7 +71,11 @@ body {
   position: relative;
   padding: 0px 10px 0px 10px;
   margin: 0px 20px 25px;
+  /*
   background-color: lightgray;
+  */
+  color: white;
+  background-color: lightcoral;
 }
 
 /* END Main Content */
@@ -73,23 +83,14 @@ body {
 /********** Mobile View **********/
 @media (max-width: 767px) {
 
-  /* Header */
   .navbar-brand {
     padding-top: 10px;
     height: 80px;
   }
-  .navbar-brand h1 { /* Restaurant name */
-    padding-top: 10px;
-    font-size: 5vw; /* 1vw = 1% of viewport width */
+  .navbar-brand h1 { /* Food LLC */
+    padding-top: 20px;
+    font-size: 10vw; /* 1vw = 1% of viewport width */
   }
-  .navbar-brand p { /* Kosher cert */
-    font-size: .6em;
-    margin-top: 12px;
-  }
-  .navbar-brand p img { /* Star-K */
-    height: 20px;
-  }
-
   #collapsable-nav a { /* Collapsed nav menu text */
     font-size: 1.2em;
   }
@@ -97,25 +98,28 @@ body {
     font-size: 1em;
     margin-right: 5px;
   }
-  /* End Header */
-
+  .separator {
+    background-color: green;
+    height: 1px;
+    width: 50%;
+  }
+  .navbar-toggle {
+    margin-bottom: 30px;
+    opacity: .8;
+  }
 }
 
 
 /********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
 @media (max-width: 479px) {
   /* Header */
-  .navbar-brand h1 { /* Restaurant name */
+  .navbar-brand h1 { /* Food LLC */
     padding-top: 5px;
-    font-size: 6vw;
+    font-size: 10vw;
   }
   /* End Header */
   
   /* Home page */
-  #menu-tile, #specials-tile {
-    width: 280px;
-    margin: 0 auto 15px;
-  }
 
   .col-xxs-12 {
     position: relative;
@@ -126,6 +130,3 @@ body {
     width: 100%;
   }
 }
-
-
-
