--- a/module-3/css/styles.css
+++ b/module-3/css/styles.css
@@ -80,6 +80,14 @@ body {
 
 /* END Main Content */
 
+/********** Desktop and Tablet View **********/
+/*
+@media (min-width : 768px) {
+  .navbar-toggle {
+    opacity: 0;
+  }
+}
+
 /********** Mobile View **********/
 @media (max-width: 767px) {
 
